portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.13-14.build.log
15:14:44 **** Build of configuration Debug for project ex.13-14 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.13-14.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.13-14.d" -MT"ex.13-14.o" -o "ex.13-14.o" "../ex.13-14.cpp"
../ex.13-14.cpp:28:48: error: expected '{' or ','
        Ccircle(int a, int b, double r) : Cshape(a,b) radius(r) {}
                                                      ^
../ex.13-14.cpp:36:47: error: expected '{' or ','
                Crect(int a, int b, double r) : Cshape(a,b) radius(r) {}
                                                            ^
../ex.13-14.cpp:62:2: error: expected '}'
}
 ^
../ex.13-14.cpp:23:29: note: to match this '{'
class Ccircle: public Cshape{
                            ^
../ex.13-14.cpp:37:31: error: expected expression
                double getarea () { return (return (garo * sero); }
                                            ^
../ex.13-14.cpp:42:11: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
        cout << "<B8><E9><C0><FB> : " << cir.getarea() << endl;
                 ^~~~~~~~~~~~~~~~
../ex.13-14.cpp:48:8: error: no matching constructor for initialization of 'Ccircle::Crect'
        Crect rect(1,1,2,3);
              ^    ~~~~~~~
../ex.13-14.cpp:36:3: note: candidate constructor not viable: requires 3 arguments, but 4 were provided
                Crect(int a, int b, double r) : Cshape(a,b) radius(r) {}
                ^
../ex.13-14.cpp:31:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 4 were provided
class Crect: public Cshape{
      ^
../ex.13-14.cpp:62:2: error: expected ';' after class
}
 ^
 ;
1 warning and 6 errors generated.
make: *** [ex.13-14.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:14:45 Build Failed. 7 errors, 1 warnings. (took 888ms)

